ansible/roles_ocp_workloads/ocp4_workload_hands_on_openshift_48/files/json_logs_namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: json-logs-example
spec:
  finalizers:
  - kubernetes
