ansible/roles_ocp_workloads/ocp4_workload_hands_on_openshift_48/files/pipelines_namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    openshift.io/description: ""
    openshift.io/display-name: "OpenShift Pipelines - Coffee Shop"
  name: "coffeeshop-pipeline"
spec:
  finalizers:
  - kubernetes
