ansible/roles_ocp_workloads/ocp4_workload_hands_on_openshift_48/files/dev_barista_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
  labels:
    app: barista
    app.kubernetes.io/component: barista
    app.kubernetes.io/instance: barista
    app.kubernetes.io/part-of: coffee-shop
    app.openshift.io/runtime: quarkus
  name: barista
  namespace: dev-coffeeshop
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app.kubernetes.io/part-of: coffee-shop
      app.openshift.io/runtime: quarkus
      deployment: barista
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app.kubernetes.io/part-of: coffee-shop
        app.openshift.io/runtime: quarkus
        deployment: barista
    spec:
      containers:
      - image: quay.io/gpte-devops-automation/barista
        imagePullPolicy: IfNotPresent
        name: barista
        ports:
        - containerPort: 8080
          protocol: TCP
        - containerPort: 8443
          protocol: TCP
        - containerPort: 8778
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
