ansible/roles_ocp_workloads/ocp4_workload_hands_on_openshift_48/files/json_logs_pod.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    component: test
  name: json-log-generator
  namespace: json-logs-example
code: &code-str |
  import time,json,sys,datetime
  def set_vals():
    data["msgcontent"]="My life is my message"
    data["facility_key"]="local0"
    data["severity_key"]="Informational"
    data["mykey"]="myvalue"
  i=0
  while True:
    i=i+1
    ts=time.time()
    data={
      "timestamp"   :datetime.datetime.fromtimestamp(ts).strftime('%Y-%m-%d %H:%M:%S'),
      "index"       :i,
    }
    set_vals()
    print json.dumps(data)
    sys.stdout.flush()
    time.sleep(0.1) # sleep for 100 msec
spec:
  containers:
    - args:
        - python2
        - -c
        - *code-str
      image: centos:centos7
      imagePullPolicy: IfNotPresent
      name: log-generator
      resources: {}
