ansible/roles_ocp_workloads/ocp4_workload_hands_on_openshift_48/files/prod_database_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: postgresql-persistent
    app.kubernetes.io/component: postgresql-persistent
    app.kubernetes.io/instance: postgresql-persistent
    app.kubernetes.io/part-of: coffee-shop
    app.openshift.io/runtime: postgresql
  name: coffee-shop-database
  namespace: prod-coffeeshop
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      name: coffee-shop-database
  strategy:
    activeDeadlineSeconds: 21600
    recreateParams:
      timeoutSeconds: 600
    type: Recreate
  template:
    metadata:
      labels:
        name: coffee-shop-database
    spec:
      containers:
      - envFrom:
        - secretRef:
            name: coffee-shop-database
        image: image-registry.openshift-image-registry.svc:5000/openshift/postgresql:10-el8
        imagePullPolicy: IfNotPresent
        livenessProbe:
          exec:
            command:
            - /usr/libexec/check-container
            - --live
          failureThreshold: 3
          initialDelaySeconds: 120
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 10
        name: postgresql
        ports:
        - containerPort: 5432
          protocol: TCP
        readinessProbe:
          exec:
            command:
            - /usr/libexec/check-container
          failureThreshold: 3
          initialDelaySeconds: 5
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        resources:
          limits:
            memory: 512Mi
        securityContext:
          privileged: false
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /var/lib/pgsql/data
          name: coffee-shop-database-data
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      terminationGracePeriodSeconds: 30
      volumes:
      - name: coffee-shop-database-data
        persistentVolumeClaim:
          claimName: coffee-shop-database
  test: false
