ansible/roles_ocp_workloads/ocp4_workload_hands_on_openshift_48/files/dev_barista_knative_service.yaml
apiVersion: serving.knative.dev/v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/part-of: coffee-shop
    app.openshift.io/runtime: quarkus
    networking.knative.dev/visibility: cluster-local
  name: barista
  namespace: "dev-coffeeshop"
spec:
  template:
    metadata:
      labels:
        app.kubernetes.io/part-of: coffee-shop
        app.openshift.io/runtime: quarkus
    spec:
      containerConcurrency: 0
      containers:
      - image: "quay.io/redhat-gpte-devops-automation/barista"
        name: user-container
        ports:
        - containerPort: 8080
        readinessProbe:
          successThreshold: 1
          tcpSocket:
            port: 0
        resources:
          requests:
            cpu: 100m
            memory: 256Mi
      enableServiceLinks: false
      timeoutSeconds: 300
  traffic:
  - latestRevision: true
    percent: 100
