ansible/roles_ocp_workloads/ocp4_workload_hands_on_openshift_48/files/dev_coffeeshop_service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: coffee-shop
    app.kubernetes.io/component: coffee-shop
    app.kubernetes.io/instance: coffee-shop
    app.kubernetes.io/part-of: coffee-shop
    app.openshift.io/runtime: quarkus
  name: coffee-shop
  namespace: "dev-coffeeshop"
spec:
  ports:
  - name: 8080-tcp
    port: 8080
  - name: 8443-tcp
    port: 8443
  - name: 8778-tcp
    port: 8778
  selector:
    app.kubernetes.io/part-of: coffee-shop
    app.openshift.io/runtime: quarkus
    deployment: coffee-shop
