ansible/roles_ocp_workloads/ocp4_workload_hands_on_openshift_48/files/prod_database_service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: postgresql-persistent
    app.kubernetes.io/component: postgresql-persistent
    app.kubernetes.io/instance: postgresql-persistent
  name: coffee-shop-database
  namespace: prod-coffeeshop
spec:
  ports:
  - name: postgresql
    port: 5432
  selector:
    name: coffee-shop-database
