ansible/roles_ocp_workloads/ocp4_workload_hands_on_openshift_48/files/dev_barista_route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app.kubernetes.io/component: coffee-shop
    app.kubernetes.io/instance: coffee-shop
    app.kubernetes.io/part-of: coffee-shop
    app.openshift.io/runtime: quarkus
  name: barista
  namespace: dev-coffeeshop
spec:
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: barista
    weight: 100
  wildcardPolicy: None
